@@ -1,7 +1,8 @@
 #version 420 core
-const int MAX_POINT_LIGHTS = 112;
+const int MAX_POINT_LIGHTS = 108;
 const int MAX_SPOT_LIGHTS = 1;
 const unsigned int POINT_LIGHT_BINDING = 1;
+const unsigned int SPOT_LIGHT_BINDING = 2;
 
 
 in vec2 TexCoord0;
@@ -11,33 +12,43 @@ in vec3 vs_normal;
 out vec4 FragColor;
 
 struct BaseLight {
-	vec3 color;
+	vec4 color;
 	float ambient_intensity;
 	float diffuse_intensity;
 };
 
-struct Attenuation {
+struct PointLight {
+	vec4 color; //vec4s used to prevent implicit padding
+	vec4 pos;
+	float ambient_intensity;
+	float diffuse_intensity;
+	float max_distance;
+	//attenuation
 	float constant;
 	float a_linear;
 	float exp;
 };
 
-struct PointLight {
-	BaseLight base;
-	vec3 pos;
+struct SpotLight { //76 BYTES
+	vec4 color; //vec4s used to prevent implicit padding
+	vec4 pos;
+	vec4 dir;
+	float ambient_intensity;
+	float diffuse_intensity;
 	float max_distance;
-	Attenuation atten;
-};
-
-//layout(std140, binding = POINT_LIGHT_BINDING) PointLights { // 56 BYTES
-	//PointLight lights[MAX_POINT_LIGHTS];
-//} PointLights;
-
-struct SpotLight {
-	PointLight base;
-	vec3 dir;
+	float constant;
+	float a_linear;
+	float exp;
 	float aperture;
+	//attenuation
 };
+layout(std140, binding = 1) uniform PointLights{
+	PointLight lights[MAX_POINT_LIGHTS];
+} point_lights;
+
+layout(std140, binding = 2) uniform SpotLights{
+	SpotLight lights[MAX_SPOT_LIGHTS];
+} spot_lights;
 
 
 struct Material {
@@ -47,7 +58,6 @@ struct Material {
 };
 
 uniform int g_num_point_lights;
-uniform PointLight g_point_lights[MAX_POINT_LIGHTS];
 uniform int g_num_spot_lights;
 uniform SpotLight g_spot_lights[MAX_SPOT_LIGHTS];
 uniform BaseLight g_ambient_light; // ambient
@@ -58,17 +68,17 @@ uniform sampler2D gSampler;
 uniform sampler2D specular_sampler;
 uniform bool specular_sampler_active; // FALSE IF NO SHININESS TEXTURE FOUND
 
-vec3 CalcPhongLight(PointLight p_light, vec3 norm) {
+vec3 CalcPhongLight(vec3 light_color, float light_diffuse_intensity, vec3 light_pos, vec3 norm) {
 	//diffuse
 
-	vec3 pos_to_light_dir_vec = normalize(p_light.pos - vs_position);
+	vec3 pos_to_light_dir_vec = normalize(light_pos - vs_position);
 	float diffuse = clamp(dot(pos_to_light_dir_vec, norm), 0, 1);
 
 	vec3 diffuse_final = vec3(0, 0, 0);
 	vec3 specular_final = vec3(0, 0, 0);
 
 	if (diffuse > 0) {
-		diffuse_final = p_light.base.color * diffuse * g_material.diffuse_color * p_light.base.diffuse_intensity;
+		diffuse_final = light_color * diffuse * g_material.diffuse_color * light_diffuse_intensity;
 
 		float specular_strength = 0.5;
 		vec3 view_dir = normalize(view_pos - vs_position);
@@ -78,7 +88,7 @@ vec3 CalcPhongLight(PointLight p_light, vec3 norm) {
 		if (specular_factor > 0) {
 			float specular_exponent = specular_sampler_active ? texture2D(specular_sampler, TexCoord0).r : 32;
 			float spec = pow(specular_factor, specular_exponent);
-			specular_final = specular_strength * spec * p_light.base.color * g_material.specular_color;
+			specular_final = specular_strength * spec * light_color * g_material.specular_color;
 		}
 	};
 
@@ -87,22 +97,29 @@ vec3 CalcPhongLight(PointLight p_light, vec3 norm) {
 
 
 vec3 CalcPointLight(PointLight light, vec3 normal) {
-	vec3 color = CalcPhongLight(light, normal);
-	float distance = length(light.pos - vs_position);
+	vec3 color = CalcPhongLight(light.color.xyz, light.diffuse_intensity, light.pos.xyz, normal);
+	float distance = length(light.pos.xyz - vs_position);
 
-	float attenuation = light.atten.constant +
-		light.atten.a_linear * distance +
-		light.atten.exp * pow(distance, 2);
+	float attenuation = light.constant +
+		light.a_linear * distance +
+		light.exp * pow(distance, 2);
 
 	return color / attenuation;
 }
 
 vec3 CalcSpotLight(SpotLight light, vec3 normal) {
-	vec3 light_to_pixel_dir = normalize(vs_position - light.base.pos);
-	float spot_factor = dot(light_to_pixel_dir, light.dir);
+	vec3 light_to_pixel_dir = normalize(vs_position - light.pos.xyz);
+	float spot_factor = dot(light_to_pixel_dir, light.dir.xyz);
 
 	if (spot_factor > light.aperture) {
-		vec3 color = CalcPointLight(light.base, normal);
+		vec3 color = CalcPhongLight(light.color.xyz, light.diffuse_intensity, light.pos.xyz, normal);
+		float distance = length(light.pos.xyz - vs_position);
+
+		float attenuation = light.constant +
+			light.a_linear * distance +
+			light.exp * pow(distance, 2);
+
+		color /= attenuation;
 		float spotlight_intensity = (1.0 - (1.0 - spot_factor) / (1.0 - light.aperture));
 		return color * spotlight_intensity;
 	}
@@ -115,18 +132,18 @@ void main()
 {
 	vec3 normal = normalize(vs_normal);
 	vec3 total_light = vec3(0.0, 0.0, 0.0);
-	vec3 ambient_light = g_ambient_light.color * g_ambient_light.ambient_intensity * g_material.ambient_color;
+	vec3 ambient_light = g_ambient_light.color.xyz * g_ambient_light.ambient_intensity * g_material.ambient_color;
 
 	//THESE TWO LOOPS NEED TO BE OPTIMISED
 	for (int i = 0; i < g_num_point_lights; i++) {
-		float distance = length(g_point_lights[i].pos - vs_position);
-		if (distance <= g_point_lights[i].max_distance) {
-			total_light += (CalcPointLight(g_point_lights[i], normal));
+		float distance = length(point_lights.lights[i].pos.xyz - vs_position);
+		if (distance <= point_lights.lights[i].max_distance) {
+			total_light += (CalcPointLight(point_lights.lights[i], normal));
 		}
 	}
 
 	for (int i = 0; i < g_num_spot_lights; i++) {
-		total_light += (CalcSpotLight(g_spot_lights[i], normal));
+		total_light += (CalcSpotLight(spot_lights.lights[i], normal));
 	}
 
 	vec3 color = max(vec3(total_light), vec3(0.0, 0.0, 0.0)) + ambient_light;
